# tndiagnose

./: AGENTS.md  CHANGELOG.md  main.py  pyproject.toml
internal/: list_partitions.py  list_topics.py
internal/kafka/: __init__.py  kafkautils.py  list_partitions.py  list_topics.py
internal/s3/: __init__.py  analyze.py  ls.py
internal/s3/analyze/: __init__.py
