[project]
name = "tndiagnose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "confluent-kafka>=2.0",
    "rich>=13",
]

[project.scripts]
kafka = "internal.kafka:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["internal"]

[tool.uv]
package = true
