[project]
name = "tndiagnose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "click>=8.0",
    "confluent-kafka>=2.0",
    "rich>=13",
    "zstandard>=0.23",
]

[project.scripts]
tndiagnose = "main:main"
kafka = "internal.kafka:cli"
s3 = "internal.s3:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["internal"]

[tool.uv]
package = true
